# kasl-cranelift-backend

./: Cargo.toml  README.md
src/: backend.rs  lib.rs  symbol_imports.rs  type_conversion.rs
src/inst_translator/: block_translator.rs  mod.rs  utils.rs
src/inst_translator/insts/: bin_op.rs  cmp.rs  cmp_imm.rs  const_val.rs  ext_func_call.rs  mod.rs  resize.rs  unary_op.rs
