[package]
name = "kasl-cranelift-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "kasl_cranelift_backend"
path = "src/lib.rs"

[dependencies]
cranelift = "0.130.0"
cranelift-codegen = "0.130.0"
cranelift-jit = "0.130.0"
cranelift-module = "0.130.0"
cranelift-native = "0.130.0"
kasl-ir = { git = "https://github.com/hatya-mouse/kasl-ir", version = "0.1.0" }
