[package]
name = "kasl-cranelift-backend"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Backend implementation of KASL for Cranelift."
repository = "https://github.com/hatya-mouse/kasl-cranelift-backend"
homepage = "https://hatya.dev"
readme = "README.md"

[lib]
name = "kasl_cranelift_backend"
path = "src/lib.rs"

[dependencies]
cranelift = "0.131.1"
cranelift-codegen = "0.131.1"
cranelift-jit = "0.131.1"
cranelift-module = "0.131.1"
cranelift-native = "0.131.1"
kasl-ir = "0.1.0"
